--- a/WebContent/css/global.css
+++ b/WebContent/css/global.css
@@ -346,7 +346,10 @@ a {
     outline:none;
 }
 
-
+/* 검색 버튼 클릭 테두리 비활성화 */
+#searchbtn:focus {
+	outline:none !important;
+}
 
 
 /*  footer 적용 css  */
