container 추가 및 template 추가
1. container 추가
 - 기존 작성 코드 수정 필요

2. member > template.jsp 추가
 - 복붙용

3. 도서 목록 페이지 추가
 - inlist.jsp, category.jsp, category.css

4. header.jsp, footer.jsp 수정
 - container 삭제 > index 및 template에 추가

--- a/WebContent/css/global.css
+++ b/WebContent/css/global.css
@@ -346,6 +346,10 @@ a {
     outline:none;
 }
 
+#searchbtn:focus {
+	outline:none !important;
+}
+
 /* 국내도서 중분류 */
 #internalmenu {
 	display: none;
