공지사항 클라이언트 구현 및 admin Header 코드 수정
1. admin Header에 남아있던 <div class=container> 코드 삭제
2. 공지사항 화면 구현 및 링크 연결
3. 로고 클릭시 메인화면으로 이동하도록 링크 연결
4. global.css에 pagination CSS코드 추가

--- a/WebContent/css/global.css
+++ b/WebContent/css/global.css
@@ -429,3 +429,21 @@ footer .click_footer {
 .logo_area {
     display:inline;
 }
+
+/*
+
+	페이지네이션 CSS
+	21.02.17 추가
+
+*/
+
+.pagination {
+    display:block;
+    text-align:center;
+    margin:50px 0;
+}
+
+.pagination > li > a {
+    float:none;
+    margin-left:-5px;
+}
