admin/index.jsp 수정 및 book/bookdetail 수정
1. admin/index.jsp 수정
 - container 추가
 - adminheader.css 삭제 (admin/asset.jsp에 있음)

2. bookdetail.jsp 수정
 - 적립금 추가(class=savepoint)

3. bookdetail.css 수정
 - savepoint class css 추가

--- a/WebContent/css/bookdetail.css
+++ b/WebContent/css/bookdetail.css
@@ -66,6 +66,12 @@ table td .priceinfo .saleprice strong {
 	font-size: 1.5em;
 }
 
+/* 적립금 */
+table td .priceinfo .savepoint {
+	display: inline-block;
+	margin-left: 15px;
+}
+
 /* 수량 > div */
 table td .amount {
 	margin-top: 50px;
