--- a/WebContent/css/adminbook.css
+++ b/WebContent/css/adminbook.css
@@ -1,26 +1,27 @@
 /* admin/book/list.jsp */
 
 [readonly] { background-color: transparent !important; }
+button { outline:none !important; }
 
-.tblbookcount {
+.tblbookcount, .tblebookcount {
 	margin-top: 20px;
 	margin-bottom: 100px;
 }
 
-.tblbookcount th, .tblbookcount td {
+.tblbookcount th, .tblbookcount td, .tblebookcount th, .tblebookcount td {
 	text-align: center;
 }
 
-.tblbookcount .label {
+.tblbookcount .label, .tblebookcount .label {
 	font-size: 1em;
 	opacity: 0.7;
 }
 
-.tblbooklist {
+.tblbooklist, .tblebooklist {
 	margin-top: 20px;
 }
 
-.tblbooklist th, .tblbooklist td {
+.tblbooklist th, .tblbooklist td, .tblebooklist th, .tblebooklist td {
 	text-align: center;
 }
 
@@ -38,6 +39,18 @@
 
 .tblbooklist th:nth-child(4) {
 	width: 50px;
+}
+
+.tblebooklist th:nth-child(1) {
+	width: 250px;
+}
+
+.tblebooklist th:nth-child(2) {
+	width: 220px;
+}
+
+.tblebooklist th:nth-child(3) {
+	width: 170px;
 }
 
 .tblbooklist td input[type=button] {
@@ -58,7 +71,7 @@ input[type=button]:focus {
 }
 
 .listheader input[type=button] {
-	width: 120px;
+	width: 130px;
 	float: right;
 	margin-right: 30px;
 }
@@ -86,8 +99,8 @@ input[type=button]:focus {
 
 #copy { width: 400px; }
 
-/* 이미지 파일명 */
-#imagename {
+/* 이미지, E-Book 파일명 */
+#imagename, #ebookname {
 	display: inline-block;
 	width: 300px;
 	margin-left: 5px;
