--- a/WebContent/css/fleamarket.css
+++ b/WebContent/css/fleamarket.css
@@ -72,6 +72,78 @@
 }
 
 
+
+/* -------- 중고거래 게시판 썸네일형 list -------- */
+.fleamarket .thumbnail-box {
+    width: 800px;
+    margin-left: 50px;
+}
+
+.fleamarket .thumbnail-list {
+    float: left;
+    padding: 10px 10px;
+}
+
+.fleamarket .thumbnail-list .seq {
+    height: 22px;
+    margin-bottom: -22px;
+    position: relative;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.527);
+    color: white;
+    padding-left: 5px;
+    font-size: 0.8em;
+    padding-top: 3px;
+}
+
+.fleamarket .thumbnail-list .book-sm {
+    position: relative;
+    z-index: 0;
+}
+
+.fleamarket .thumbnail-list .attach {
+    width: 130px;
+    height: 180px;
+    overflow: hidden;
+}
+
+.fleamarket .thumbnail-list .subject {
+    font-weight: bold;
+    font-size: 1.2em;
+    width: 130px;
+    height: 28px;
+    overflow: hidden;
+}
+
+.fleamarket .thumbnail-list .id{
+    font-size: 0.9em;
+    color: #AAA;
+}
+
+.fleamarket .thumbnail-list .regdate {
+    font-size: 0.7em;
+    color: #AAA;
+}
+
+.fleamarket .thumbnail-list .cnt {
+    border: 1px solid #666;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 5px;
+    margin: -35px 0px 0px 100px;
+    font-size: 0.9em;
+}
+
+/* hover */
+.fleamarket .thumbnail-box .thumbnail-list:hover {
+    background-color: #f3dbc7;   
+}
+
+
+
+
 /* ------- 중고도서 거래 게시판 글 상세보기 --------  */
 
 .fleamarket .table-view {
