관리자 휴면계정 관리 페이지 추가,  custinfo 파일명 수정, 기타 수정
1. 관리자 휴면계정 관리 페이지 추가
 - DormancyMng.java, dormancymng.jsp, dormancymng.css 추가

2. custinfo 파일명 수정
 - custInfo.css  -> custinfo.css

3. 기타 수정
 - custmng.jsp 오타 수정
 - custinfoedit.jsp 수정

--- a/WebContent/css/custinfo.css
+++ b/WebContent/css/custinfo.css
@@ -4,19 +4,6 @@ h5 {
 	margin-top: 50px;
 }
 
-
-.info-sm{
-	width: 70px	
-}
-
-.info-md{
-	width: 150px;
-}
-
-.info-lg{
-	width: 260px;
-}
-
 span{
 	margin: 0px 5px;
 }
@@ -30,10 +17,25 @@ input[type="radio"]{
 	
 }
 
+/*custinfo css*/
 #idtbl tr:nth-child(2) a {
 	margin-left: 360px;	 
 }
 
+/*custinfoedit css*/
 #editidtbl a {
 	margin-left: 280px;
+}
+
+/*텍스트 박스 크기*/
+.info-sm{
+	width: 70px	
+}
+
+.info-md{
+	width: 150px;
+}
+
+.info-lg{
+	width: 260px;
 }
