--- a/WebContent/css/orderpaynon.css
+++ b/WebContent/css/orderpaynon.css
@@ -1,6 +1,7 @@
 article{
 	margin: 0 auto;
 	width:1000px;
+	margin-bottom: 60px;
 }
 
 .img-orderstate{
@@ -11,13 +12,15 @@ article{
     background-color: #EFEFEF;
     padding: 6px 12px;
     font-size: 14px;
-    border-radius: 3px;
+    border-radius: 3px;  
 }
 
 .btn1:hover{
     color: #555;
     font-weight: normal;
 }
+
+
 
 .not-login {
     position: relative;
@@ -63,20 +66,29 @@ article{
     top: 1.2px;
 }
 
-
-
-.btn-pay{
-	background-color: #BC4B51;
-    color: white;
-    width: 120px;
-    height: 50px;
-    padding: 4px 10px;
-    border-radius: 3px;
-    margin-top: 8px;
-    display: inline-block;
+.tbl-non-orderer{
+	border-top: 1px solid #DDD;
+	text-indent: 17px;	
 }
 
-.btn-pay:hover{
-	color: white;
-    font-weight: normal;	
+.tbl-non-orderer tr td:first-child{
+	width: 200px;
+	border-right: 1px solid #DDD;
+	vertical-align: middle;
+}
+
+.tbl-non-orderer tr:nth-child(2) td
+,.tbl-non-orderer tr:nth-child(3) td
+{
+	border-top: 0;
+}
+
+.tbl-non-orderer input{
+	padding: 6px 5px;
+	width: 160px;
+}
+
+delivery-type-bar ul li{
+	width: 25%;	
+	
 }
