--- a/WebContent/css/searchview.css
+++ b/WebContent/css/searchview.css
@@ -2,14 +2,22 @@
 
 #booklist{
 
-  /* display: flex;
-  justify-content: center; 
-  margin:auto;*/
 
 
 }
 
-#booklist > img {
+.bestrank5 img{
+	width:100px;
+	height:100px;	
+}
+
+#img1 {
+	border : 1px solid black;
+	width:100px;
+	height:100px;
+}
+
+#booklist img {
 	float:left;
 	width:100px;
 	height:100px;
@@ -66,9 +74,11 @@
 }
 
 .bookbox5, .bookbox6, .bookbox7, .bookbox8, .bookbox9, .bookbox10 {
+	position:absoulte;
 	border: 1px solid #E5E5E5;
 	width: 700px;
 	height: 220px;
+	left:50% !important;
 
 	
 	
@@ -78,16 +88,19 @@
 	float: left;
 	margin-left: 15px;
 	margin-right: 15px;
+	width:100px;
 }
 
 #rank2to4 img {
 	margin-top: 10px;
+	width:100px;
 }
 
 #rank5to10 img {
 	height: 160px;
 	float: left;
 	margin: 10px;
+	width:100px;
 }
 
 .bookname {
@@ -104,7 +117,7 @@
 }
 
 .btn-default, .btn-danger, .btn-warning {
-	float: left;
+	float: right;
 	margin: 3px;
 }
 
