--- a/WebContent/css/register.css
+++ b/WebContent/css/register.css
@@ -29,7 +29,7 @@
 
 
 
-#test001 tr:nth-child(3), 
+/* #test001 tr:nth-child(3),  */
 #test001 tr:nth-child(4),
 #test001 tr:nth-child(5),
 #test001 tr:nth-child(6){
