--- a/WebContent/css/ebookdetail.css
+++ b/WebContent/css/ebookdetail.css
@@ -2,8 +2,8 @@
 
 /* 섹션 margin 변경 */
 .contentsection {
-	margin-left: -20px;
-	margin-top: -10px;
+	margin-left: -20px !important;
+	margin-top: -10px !important;
 }
 
 .table tbody tr td {
