--- a/WebContent/css/curationletter.css
+++ b/WebContent/css/curationletter.css
@@ -12,12 +12,6 @@ h3 {
     margin-bottom:30px;
     margin-left:auto;
     margin-right:auto;
-    text-align:center;
-}
-
-#subtitle {
-    text-align:center;
-    margin-bottom:50px;
 }
 
 #btn {
@@ -25,7 +19,17 @@ h3 {
 	text-align:center;
 }
 
+#logtbl th, td {
+	text-align:center;
+}
+
+#logtbl td {
+	vertical-align:center;
+}
+
 /* 2. 큐레이션레터 작성 */
+
+
 
 #example {
     width:100%px;
@@ -36,37 +40,12 @@ h3 {
     padding:50px;
 }
 
-#letterbox {
-    background-color:#5B8E7D;
-    padding:15px;
-    margin-bottom:40px;
-    margin-left:auto;
-    margin-right:auto;
-    width:80%;
-    height:500px;
-}
-
-#title {
-    width:80%;
-    margin:20px auto;
-}
-
-#title, #content {
-    width:80%;
-    margin:50px auto;
-}
-
 /* 3. 큐레이션레터 상세조회 */
 
-#qbox {
-    width:700px;
-    background-color:rgba(91, 142, 125, .2);
-    margin-bottom:50px;
-    margin-left:auto;
-    margin-right:auto;
-    padding:50px;
+#lettertbl th {
+	text-align:center;
 }
 
-#qbox > h5 {
-    border-bottom:1px dashed #ccc;
+#lettertbl td {
+	text-align:left;
 }
