--- a/WebContent/css/qna.css
+++ b/WebContent/css/qna.css
@@ -9,17 +9,6 @@
 
 /* QnA 목록조회 */
 
-.qnatbl {
-	margin:0 auto;
-}
-
-.qnatbl th, td {
-	text-align:center;
-}
-
-.cell3 {
-	text-align:left;
-}
 
 h3 {
     margin-bottom:30px;
@@ -27,27 +16,10 @@ h3 {
     margin-right:auto;
 }
 
-#subtitle {
-    text-align:center;
-    margin-bottom:50px;
-}
-
-#qbox {
-    width:700px;
-    background-color:rgba(91, 142, 125, .2);
-    margin-bottom:50px;
-    margin-left:auto;
-    margin-right:auto;
-    padding:50px;
-}
-
-#qbox > h5 {
-    border-bottom:1px dashed #ccc;
-}
-
 #btn {
     width:100%;
     text-align:center;
+    margin:20px;
 }
 
 #senddate {
@@ -66,35 +38,13 @@ h3 {
     text-align:center;
 }
 
-#qinfo {
-    margin-bottom:20px;
+#listtbl th, td {
+	text-align:center;
 }
 
-#ainfo {
-    margin-top:10px;
-}
 
-/* 관리자 답변 수정 */
-
-#answerbox {
-	padding:15px;
-	background-color:#5B8E7D;
-	width:700px;
-    margin:50px auto;
-    
-}
 
 /* 고객 질문 수정 */
-
-#letterbox {
-    background-color:#5B8E7D;
-    padding-top:30px;
-    margin-bottom:40px;
-    margin-left:auto;
-    margin-right:auto;
-    width:80%;
-    height:520px;
-}
 
 #content {
     width:80%;
@@ -114,7 +64,19 @@ h3 {
 }
 
 /* 고객 QnA 조회 */
-#qnatbl th, td {
+#listtbl th, td {
+	text-align:center;
+}
+
+/* 관리자 답변 입력 */
+
+#modaltbl {
+	width:100%;
+}
+
+/* 관리자 상세조회 */
+
+#qnatbl th, td{
 	text-align:center;
 }
 
@@ -124,10 +86,4 @@ h3 {
 
 #qnatbl tr:nth-child(4) td {
 	text-align:left;
-}
-
-/* 관리자 답변 입력 */
-
-#modaltbl {
-	width:100%;
 }
