관리자 > 도서 추가 기능 구현
1. 관리자 도서 추가 기능 구현
 - BookAdd.java, BookAddOk.java, bookadd.jsp 구현 및 수정

2. 관리자 도서 목록 페이징 추가
 - BookList.java, booklist.jsp

3. 도서재고 DAO, DTO 추가
 - BookInventoryDAO & DTO

4. 기타 수정
 - DAO, DTO, jsp 일부 수정

--- a/WebContent/css/adminbook.css
+++ b/WebContent/css/adminbook.css
@@ -135,14 +135,20 @@ input[type=button]:focus {
 /* modal */
 
 /* modal > 카테고리 선택 */
-.tblcategory th {
+#tblcategory th {
 	text-align: center;
 }
 
+/* 작가명 검색어 입력 텍스트박스 + 검색 버튼 -> 우측 정렬 */
+.searchbar { text-align: right; }
+
 /* modal > 작가명 검색창 */
-#searchauthor { width: 200px; display: inline-block; }
+#searchauthorname { width: 200px; display: inline-block; }
+
+/* modal > 작가 리스트 테이블 */
+#tblauthorlist th:nth-child(1) { width: 50px; }
+#tblauthorlist th:nth-child(2) { width: 100px; }
+#tblauthorlist th:nth-child(3) { width: auto; }
 
 
-.btnAdd > span {
-	color : white;
-}
+
