--- a/WebContent/css/refund.css
+++ b/WebContent/css/refund.css
@@ -143,6 +143,7 @@
 
 .list-form .table th {
     text-align: center;
+    vertical-align: middle;
 }
 
 .list-form .list td {
@@ -154,16 +155,13 @@
     padding: auto 20px;
 }
 
-.list-form #ctg {
-    width: 60px;
-}
 
 .list-form #orderN {
     width: 120px;
 }
 
 .list-form #date {
-    width: 120px;
+    width: 140px;
 }
 
 .list-form #totalamount {
