--- a/WebContent/css/adminorder.css
+++ b/WebContent/css/adminorder.css
@@ -28,16 +28,15 @@
 }
 
 /*    datepicker 사이즈 + display : inline-block    */
-.list-form #now_date {
+.list-form #startDate {
     width: 165px;
     display: inline-block;
 }
 
-.list-form #date_before_month {
+.list-form #endDate {
     width: 165px;
     display: inline-block;
 }
-
 
 /* 교환/환불/취소 조회 버튼 위치 조정 */
 .list-form .search-type tr:nth-child(1) > td:nth-child(3), .list-form .search-type tr:nth-child(1) > td:nth-child(5) {
@@ -89,25 +88,26 @@
     background-color: RGBA(140,179,105,0.2);
 }
 
-.list-form .tbl-result th:nth-child(1) {
+/* .list-form .tbl-result th:nth-child(1) {
     width: 90px;
-}
+} */
 
-.list-form .tbl-result th:nth-child(2) {
+.list-form .tbl-result th:nth-child(1) {
     width: 100px;
 }
 
 /* 주문번호 */
-.list-form .tbl-result td:nth-child(2) a {
+.list-form .tbl-result td:nth-child(1) a {
     color: #F4A259;
 }
 
-.list-form .tbl-result th:nth-child(3) {
+.list-form .tbl-result th:nth-child(2) {
     width: 120px;
 }
 
-.list-form .tbl-result td:nth-child(4) {
+.list-form .tbl-result td:nth-child(3) {
     text-align: left;
+    width: auto;
 }
 
 /* 상품정보 (주문 수량 표기) */
@@ -117,9 +117,14 @@
     padding-left: 5px;
 }
 
-.list-form .tbl-result th:nth-child(5) {
+.list-form .tbl-result th:nth-child(4) {
     width: 110px;
 }
+
+.list-form .tbl-result th:nth-child(5) {
+    width: 80px;
+}
+
 
 .list-form .tbl-result th:nth-child(6) {
     width: 110px;
