--- a/WebContent/css/adminbook.css
+++ b/WebContent/css/adminbook.css
@@ -120,7 +120,7 @@ input[type=button]:focus {
 }
 
 /* 하단 버튼 */
-.actionbtns input {
+.actionbtns [type=button] {
 	width: 150px;
 	height: 60px;
 	font-size: 1.4em;
