관리자 bookadd, bookedit jsp 수정
1. bookadd.jsp, bookedit.jsp 수정
 - 작가소개 textarea 속성값 수정(rows=10, maxlength=1500)
 - 도서소개, 목차 textarea 속성값 수정(maxlength=1500)
 - 정가 > 단위 안내 추가, width 수정

2. 작가검색 > 라디오버튼 가운데정렬

--- a/WebContent/css/adminbook.css
+++ b/WebContent/css/adminbook.css
@@ -83,6 +83,7 @@ input[type=button]:focus {
 }
 
 /* admin/book/add.jsp */
+
 #title { width: 300px; }
 
 #publisher { width: 300px; }
@@ -97,7 +98,7 @@ input[type=button]:focus {
 
 #isbn { width: 200px; }
 
-#price { width: 100px; text-align: right; }
+#price { width: 80px; text-align: right; }
 
 #amount { width: 80px; text-align: center; }
 
@@ -146,9 +147,9 @@ input[type=button]:focus {
 #searchauthorname { width: 200px; display: inline-block; }
 
 /* modal > 작가 리스트 테이블 */
-#tblauthorlist th:nth-child(1) { width: 50px; }
+#tblauthorlist th:nth-child(1) { width: 50px; text-align: center; }
 #tblauthorlist th:nth-child(2) { width: 100px; }
 #tblauthorlist th:nth-child(3) { width: auto; }
-
+#tblauthorlist td:nth-child(1) { text-align: center; }
 
 
